# pip-kanpe-tool-desktop

./: .gitignore  LICENSE  README.md  app.js  core.js  i18n.js  index.html  package-lock.json  package.json  pip-window.js  pip.html  styles.css
.github/workflows/: ci.yml  release.yml
assets/maker/fields/: README.md
assets/maker/official/jobs/: README.md
docs/: README.md  data-spec.md  desktop-spec.md  functional-spec.md  maker-spec.md  release-spec.md  test-spec.md
release/: latest-beta.example.json  latest.example.json
scripts/: build-web.mjs  dev-server.mjs  validate-release.mjs
src-tauri/: Cargo.toml  tauri.beta.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: core.test.js
