[package]
name = "pip-kanpe-tool-desktop"
version = "0.1.0"
description = "Desktop edition of PiP Kanpe Tool"
authors = ["Linn-0412"]
edition = "2021"

[lib]
name = "pip_kanpe_tool_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"

